--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: pip install mkdocs-git-revision-date-localized-plugin
+      - run: pip install jieba
+      - run: pip install rich
       - uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
