--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: pip install jieba
       - run: pip install rich
+      - run: pip install mkdocs-statistics-plugin
       - uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
