添加了评论区

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,10 +12,10 @@ nav:
 theme:
   name: material
   language: 'zh'
-  favicon: 'logo.ico'
+  # favicon: 'logo.ico'
   icon:
     logo: material/cat
-  # custom_dir: overrides
+  custom_dir: overrides
   features:
     - content.code.annotate
     - navigation.tracking
