--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: oneko 的小窝
 site_url: https://qaqdev.github.io/
 repo_name: QAQdev/something
 repo_url: https://github.com/qaqdev/qaqdev.github.io
-edit_uri: ""
+edit_uri: "tree/master/docs"
 site_description: oneko 的小窝
 copyright: Copyright &copy; 2023-2024 <a href="https://github.com/QAQdev" target="_blank" rel="noopener">oneko</a>
 
@@ -12,7 +12,7 @@ nav:
 theme:
   name: material
   language: 'zh'
-  favicon: '../logo.ico'
+  favicon: 'static/logo.ico'
   icon:
     logo: material/cat
     admonition:
@@ -87,8 +87,9 @@ plugins:
   - search:
       separator: '[\s\u200b\-]'
   - git-revision-date-localized:
+      type: datetime
+      timezone: Asia/Shanghai
+      locale: zh
       enable_creation_date: true
-      type: timeago
-  - statistics:
-      page_check_metadata: comment
+  - statistics
 
