--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,10 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.details
   - pymdownx.snippets
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.magiclink
   - pymdownx.superfences
   - pymdownx.inlinehilite
