--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # 不设置这个就会让 update 和 create 混淆
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
