--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,4 +114,5 @@ plugins:
       timezone: Asia/Shanghai
       locale: zh
       enable_creation_date: true
-  - statistics:
+  - statistics
+  - optimize
