--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,9 @@ site_description: oneko verse
 copyright: Copyright &copy; 2023-2024 <a href="https://github.com/QAQdev" target="_blank" rel="noopener">oneko</a>
 
 nav:
-  - 主页: index.md
+  - 主页⭐️:
+    - index.md
+    - Setup: setup.md
   - 关于: about.md
 
 theme:
@@ -110,6 +112,7 @@ extra:
 
 extra_css:
   - css/admonition.css
+  - css/extra.css
 
 plugins:
   - search
