--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -130,6 +130,8 @@ extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
   - js/tablesort.js
+  - js/oneko/oneko.js
+
 
 plugins:
   - search
