--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -14,7 +14,7 @@
     - pageupdate:
         text: 离散数学 Ch2 迁移完成 -> dm/ch2.md
         href: /zju/dm/ch2/
-    - function: 适配了 changelog 在深色/浅色模式下的显示（https://github.com/TonyCrane/mkdocs-changelog-plugin/issues/3）
+    - function: 适配了 changelog 在深浅模式下的显示（https://github.com/TonyCrane/mkdocs-changelog-plugin/issues/3）
     - function: 加入了 oneko! 
     - bugfix: 修复了评论区深浅切换的 bug
   - "2023-06-30":
