--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
       - run: pip install rich
       - run: pip install mkdocs-statistics-plugin
       - run: pip install mkdocs-changelog-plugin
+      - run: pip install mkdocs-extra-sass-plugin
+      - run: pip install livereload
       - uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
