--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - run: pip install mkdocs-changelog-plugin
       - run: pip install mkdocs-extra-sass-plugin
       - run: pip install livereload
+      - run: echo 'oneko.zone' > ./build/CNAME && gh-pages -d build
       - uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
