--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,7 +1,7 @@
 - 2023:
   - "2023-07-08":
     - newpage:
-        text: 回顾在软工的三年 -> life/past3years.md
+        text: 在软工的三年 -> life/past3years.md
         href: /life/past3years/
     - function: 一些有趣的历史性的代码片段 -> playground/historical_codes.md
     - newpage:
@@ -14,7 +14,7 @@
     - pageupdate:
         text: 离散数学 Ch2 迁移完成 -> dm/ch2.md
         href: /zju/dm/ch2/
-    - function: 适配了 changelog 在深浅模式下的显示（https://github.com/TonyCrane/mkdocs-changelog-plugin/issues/3）
+    - function: 适配了 changelog 在深浅模式下的显示
     - function: 加入了 oneko! 
     - bugfix: 修复了评论区深浅切换的 bug
   - "2023-06-30":
