--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
     - playground/index.md
     - playground/nasa.md
     - playground/historical_codes.md
+    - playground/bar.md
   - About: about.md
 
 theme:
