--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -2,6 +2,7 @@
   - "2024-01-15":
     - newpage:
         text: 离散数学 Ch(3)(4)(5)(6) 迁移完成 -> dm/ch(3)(4)(5)(6).md
+        href: /zju/
 - 2023:
   - "2023-10-21":
     - newpage:
