--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,7 +1,7 @@
 - 2024:
   - "2024-01-15":
     - newpage:
-        text: 离散数学 Ch(3)(4)(5)(6) 迁移完成 -> dm/ch(3)(4)(5)(6).md
+        text: 离散数学 Ch(3)(4)(5)(6)(8)(9)(10) 迁移完成
         href: /zju/
 - 2023:
   - "2023-10-21":
