--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,10 +1,13 @@
 - 2024:
+  - "2024-01-23":
+    - function: 主页添加访客记录
+    - newpage:
+        text: 离散数学笔记迁移完成
+        href: /zju/dm
   - "2024-01-15":
     - newpage:
         text: 离散数学 Ch(3)(4)(5)(6)(8)(9)(10) 迁移完成
-        href: /zju/
-  - "2024-01-23":
-    - function: 主页添加访客记录
+        href: /zju/dm
 - 2023:
   - "2023-10-21":
     - newpage:
