--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Oneko Zone
-site_url: https://qaqdev.github.io/
+site_url: https://oneko.zone/
 repo_name: QAQdev/something
-repo_url: https://github.com/qaqdev/qaqdev.github.io
+repo_url: https://github.com/QAQdev/notes
 edit_uri: "tree/master/docs"
 site_description: Keep records of my life, research and work
 copyright: Copyright &copy; 2024-2025 <a href="https://github.com/QAQdev" target="_blank" rel="noopener">oneko</a>
